WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268650
REGRESSION(
273934@main
): [ Debug ] Multiple layout tests crashing.
https://bugs.webkit.org/show_bug.cgi?id=268650
Summary
REGRESSION(273934@main): [ Debug ] Multiple layout tests crashing.
Ben Schwartz
Reported
2024-02-02 11:55:41 PST
Multiple tests are crashing following the changes at
273934@main
, impacting EWS queues. Example test: imported/w3c/web-platform-tests/css/cssom/getComputedStyle-pseudo.html CRASH LOG: ASSERTION FAILED: !collector.matchedPseudoElementIds() /Volumes/Data/worker/macOS-AppleSilicon-Sonoma-Debug-Build-EWS/build/Source/WebCore/style/StyleResolver.cpp(482) : std::optional<ResolvedStyle> WebCore::Style::Resolver::styleForPseudoElement(const Element &, const PseudoElementRequest &, const ResolutionContext &) 1 0x13bf1dbfc WTFCrash 2 0x2a7d07a20 WebCore::AudioWorkletProcessor::buildJSArguments(JSC::VM&, JSC::JSGlobalObject&, JSC::MarkedVector<JSC::JSValue, 8ul, WTF::RecordOverflow>&, WTF::Vector<WTF::RefPtr<WebCore::AudioBus, WTF::RawPtrTraits<WebCore::AudioBus>, WTF::DefaultRefDerefTraits<WebCore::AudioBus>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc> const&, WTF::Vector<WTF::Ref<WebCore::AudioBus, WTF::RawPtrTraits<WebCore::AudioBus>, WTF::DefaultRefDerefTraits<WebCore::AudioBus>>, 0ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>&, WTF::HashMap<WTF::String, std::__1::unique_ptr<WebCore::AudioArray<float>, std::__1::default_delete<WebCore::AudioArray<float>>>, WTF::DefaultHash<WTF::String>, WTF::HashTraits<WTF::String>, WTF::HashTraits<std::__1::unique_ptr<WebCore::AudioArray<float>, std::__1::default_delete<WebCore::AudioArray<float>>>>, WTF::MemoryCompactLookupOnlyRobinHoodHashTableTraits> const&) 3 0x2aab4c008 WebCore::Style::Resolver::styleForPseudoElement(WebCore::Element const&, WebCore::Style::PseudoElementRequest const&, WebCore::Style::ResolutionContext const&) 4 0x2a8b07a74 WebCore::Document::styleForElementIgnoringPendingStylesheets(WebCore::Element&, WebCore::RenderStyle const*, std::__1::optional<WebCore::Style::PseudoElementIdentifier> const&) 5 0x2a8c133c0 WebCore::Element::resolvePseudoElementStyle(WebCore::Style::PseudoElementIdentifier const&) ... (full attached) REGRESSION: This issue began at
273934@main
.
Attachments
crashing-thread.txt
(4.96 KB, text/plain)
2024-02-02 11:56 PST
,
Ben Schwartz
no flags
Details
crash-data.ips
(51.22 KB, text/plain)
2024-02-02 11:57 PST
,
Ben Schwartz
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-02 11:56:01 PST
<
rdar://problem/122199019
>
Ben Schwartz
Comment 2
2024-02-02 11:56:54 PST
Created
attachment 469679
[details]
crashing-thread.txt
Ben Schwartz
Comment 3
2024-02-02 11:57:26 PST
Created
attachment 469680
[details]
crash-data.ips
Tim Nguyen (:ntim)
Comment 4
2024-02-02 12:34:21 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23773
EWS
Comment 5
2024-02-02 12:56:02 PST
Committed
274010@main
(ea774f9f202d): <
https://commits.webkit.org/274010@main
> Reviewed commits have been landed. Closing PR #23773 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug