REGRESSION(273934@main): [ Debug ] Multiple layout tests crashing. https://bugs.webkit.org/show_bug.cgi?id=268650 rdar://122199019

Reviewed by Matthieu Dubet.

This restores the behavior pre-273934@main when getting the computed style of pseudo-elements like "::placeholder" / "::file-selector-button".

getComputedStyle() support for these pseudo-elements is currently broken (and has always been), since we return the element style instead, but this change
makes it so we stop asserting.

* Source/WebCore/page/LocalDOMWindow.cpp:
(WebCore::LocalDOMWindow::getComputedStyle const):

Canonical link: https://commits.webkit.org/274010@main